--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
