--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CreditWise AI: Advanced Credit Analysis",
+  "name": "CreditWise AI: Advanced Credit Analyzer",
   "short_name": "CreditWise",
   "description": "An AI-powered application to analyze credit reports, assess risk, and determine loan eligibility.",
   "start_url": "/",
