--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,52 +1,21 @@
 {
-  "name": "CreditWise AI: Advanced Credit Analyzer",
+  "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "An AI-powered application to analyze credit reports, assess risk, and determine loan eligibility.",
+  "description": "Instant credit report analysis with AI — EMI tracker, DPD alerts, legal insights & more.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4361ee",
+  "theme_color": "#4A90E2",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
       "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
+      "sizes": "192x192"
     },
     {
       "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
