--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,26 @@
 {
+  "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4361ee",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
