--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "description": "Instant credit report analysis with AI — EMI tracker, DPD alerts, legal insights & more.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3F51B5",
+  "theme_color": "#4A90E2",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
