--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,31 +1,22 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "short_name": "CW-A",
+  "description": "CreditWise AI helps users analyze CIBIL reports instantly with smart forensic and financial insights.",
+  "id": "/?source=pwa",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3F51B5",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
-  ],
-  "share_target": {
-    "action": "/share-target",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "title": "name",
-      "text": "description",
-      "url": "link"
-    }
-  }
+  ]
 }
