Is everything is ok now can I go live

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4A90E2",
+  "theme_color": "#4361ee",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
