--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,72 @@
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "Instant credit report analysis with AI — EMI tracker, DPD alerts, legal insights & more.",
-  "start_url": "/",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "start_url": ".",
+  "scope": ".",
+  "id": "/?source=pwa",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#121212",
   "theme_color": "#4361ee",
+  "orientation": "portrait",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
   "icons": [
     {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
       "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
       "type": "image/png",
-      "sizes": "192x192"
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+   "screenshots" : [
+    {
+      "src": "https://placehold.co/1080x1920.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "https://placehold.co/1280x800.png",
+      "type": "image/png",
+      "sizes": "1280x800",
+      "form_factor": "wide"
     }
   ]
 }
