--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,71 +2,54 @@
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": ".",
-  "scope": ".",
-  "id": "/?source=pwa",
-  "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#4361ee",
-  "orientation": "portrait",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-   "screenshots" : [
+  "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+  "id": "/",
+  "orientation": "portrait-primary",
+  "launch_handler": {
+    "client_mode": [
+      "navigate-existing",
+      "auto"
+    ]
+  },
+  "screenshots": [
     {
       "src": "https://placehold.co/1080x1920.png",
-      "type": "image/png",
       "sizes": "1080x1920",
-      "form_factor": "narrow"
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "AI Credit Analysis"
     },
     {
-      "src": "https://placehold.co/1280x800.png",
+      "src": "https://placehold.co/1080x1920.png",
+      "sizes": "1080x1920",
       "type": "image/png",
-      "sizes": "1280x800",
-      "form_factor": "wide"
+      "form_factor": "narrow",
+      "label": "Forensic Document Verification"
+    },
+    {
+      "src": "https://placehold.co/1920x1080.png",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "AI Model Training"
     }
   ]
 }
