--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,9 @@
 {
+  "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
@@ -6,50 +11,54 @@
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
-  "theme_color": "#4361ee",
-  "background_color": "#f5f7fa",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
-  "id": "/",
-  "orientation": "portrait-primary",
+  "id": "/?source=pwa",
+  "lang": "en-US",
+  "dir": "auto",
+  "categories": [
+    "finance",
+    "business",
+    "utilities"
+  ],
+  "prefer_related_applications": false,
   "launch_handler": {
     "client_mode": [
-      "navigate-existing",
+      "focus-existing",
       "auto"
     ]
   },
+  "orientation": "portrait",
   "screenshots": [
     {
       "src": "https://placehold.co/1080x1920.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "AI Credit Analysis"
+      "label": "Credit Analysis"
     },
     {
       "src": "https://placehold.co/1080x1920.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "Forensic Document Verification"
-    },
-    {
-      "src": "https://placehold.co/1920x1080.png",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "AI Model Training"
+      "label": "AI Underwriting"
     }
   ]
 }
