--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,64 +1,83 @@
 {
-  "theme_color": "#4361ee",
-  "background_color": "#f5f7fa",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "start_url": "/",
+  "id": "/?source=pwa",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#F0F2F5",
+  "theme_color": "#3F51B5",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-384x384.png",
+      "src": "/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "id": "/?source=pwa",
-  "lang": "en-US",
-  "dir": "auto",
-  "categories": [
-    "finance",
-    "business",
-    "utilities"
-  ],
-  "prefer_related_applications": false,
-  "launch_handler": {
-    "client_mode": [
-      "focus-existing",
-      "auto"
-    ]
-  },
-  "orientation": "portrait",
   "screenshots": [
     {
-      "src": "https://placehold.co/1080x1920.png",
-      "sizes": "1080x1920",
+      "src": "/screenshots/screenshot1.png",
       "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Credit Analysis"
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
     },
     {
-      "src": "https://placehold.co/1080x1920.png",
-      "sizes": "1080x1920",
+      "src": "/screenshots/screenshot2.png",
       "type": "image/png",
-      "form_factor": "narrow",
-      "label": "AI Underwriting"
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
     }
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "categories": [
+    "finance",
+    "utilities"
+  ],
+  "dir": "ltr",
+  "lang": "en-US",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "scope_extensions": [
+    { "origin": "*" }
   ]
 }
