--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,83 +1,91 @@
 {
+  "theme_color": "#4361ee",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
   "id": "/?source=pwa",
-  "scope": "/",
-  "display": "standalone",
-  "background_color": "#F0F2F5",
-  "theme_color": "#3F51B5",
-  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "/screenshots/screenshot1.png",
+      "src": "/screenshot1.png",
       "type": "image/png",
-      "sizes": "1080x1920",
+      "sizes": "1080x2340",
       "form_factor": "narrow"
     },
     {
-      "src": "/screenshots/screenshot2.png",
+      "src": "/screenshot2.png",
       "type": "image/png",
-      "sizes": "1080x1920",
-      "form_factor": "narrow"
+      "sizes": "1920x1080",
+      "form_factor": "wide"
     }
   ],
+  "orientation": "portrait",
   "launch_handler": {
-    "client_mode": "navigate-existing"
+    "client_mode": [
+      "navigate-existing",
+      "auto"
+    ]
   },
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "file_handlers": [
+    {
+      "action": "/share-target",
+      "name": "Credit Report",
+      "accept": {
+        "application/pdf": [
+          ".pdf"
+        ]
+      }
+    }
+  ],
+  "handle_links": "auto",
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwise",
+      "action": "/credit?url=%s"
+    }
+  ],
+  "related_applications": [],
+  "scope_extensions": [
+    {
+      "origin": "*.creditwise-ai-nd7s0.us-central1.hosted.app"
+    }
+  ],
   "categories": [
     "finance",
     "utilities"
   ],
   "dir": "ltr",
   "lang": "en-US",
-  "prefer_related_applications": false,
-  "related_applications": [],
-  "scope_extensions": [
-    { "origin": "*" }
-  ]
+  "prefer_related_applications": false
 }
