--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,80 +2,56 @@
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
-  "display": "standalone",
-  "display_override": [
-    "window-controls-overlay"
-  ],
-  "background_color": "#ffffff",
-  "theme_color": "#4361ee",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "/icons/maskable_icon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
-  "id": "/?source=pwa",
-  "launch_handler": {
-    "client_mode": [
-      "navigate-existing",
-      "auto"
-    ]
-  },
+  "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
+  "start_url": "/",
+  "display": "standalone",
   "orientation": "portrait",
+  "id": "/?source=pwa",
+  "scope": "/",
+  "lang": "en-US",
+  "dir": "ltr",
+  "categories": ["finance", "utilities", "business"],
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "display_override": [
+    "standalone",
+    "minimal-ui",
+    "window-controls-overlay"
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
   "screenshots": [
     {
       "src": "/screenshots/screenshot1.png",
-      "sizes": "1080x1920",
       "type": "image/png",
-      "label": "Analyze your credit report with AI"
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
     },
     {
       "src": "/screenshots/screenshot2.png",
-      "sizes": "1080x1920",
       "type": "image/png",
-      "label": "Get detailed risk assessments and loan eligibility"
-    }
-  ],
-  "categories": [
-    "finance",
-    "utilities"
-  ],
-  "dir": "ltr",
-  "lang": "en-US",
-  "prefer_related_applications": false,
-  "related_applications": [],
-  "scope": "/",
-  "scope_extensions": [
-    { "origin": "*.firebaseapp.com" },
-    { "origin": "*.web.app" }
-  ],
-  "shortcuts": [
-    {
-      "name": "Credit Analysis",
-      "short_name": "Credit",
-      "description": "Analyze a CIBIL credit report",
-      "url": "/credit",
-      "icons": [{ "src": "/icons/shortcut-credit.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Verify PDF",
-      "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF",
-      "url": "/verify",
-      "icons": [{ "src": "/icons/shortcut-verify.png", "sizes": "96x96" }]
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
     }
   ],
   "share_target": {
@@ -87,35 +63,76 @@
       "url": "url"
     }
   },
+  "shortcuts": [
+    {
+      "name": "Credit Analysis",
+      "short_name": "Analyze",
+      "description": "Analyze a CIBIL credit report",
+      "url": "/credit",
+      "icons": [{ "src": "/icons/shortcut-credit.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Verify PDF",
+      "short_name": "Verify",
+      "description": "Run forensic analysis on a PDF",
+      "url": "/verify",
+      "icons": [{ "src": "/icons/shortcut-verify.png", "sizes": "192x192" }]
+    }
+  ],
   "widgets": [
     {
-      "name": "CreditWise AI Quick Actions",
-      "description": "Access key features of CreditWise AI from your home screen.",
-      "tag": "actions",
-      "template": "actions",
-      "ms_ac_template": "actions",
+      "name": "CreditWise AI Summary",
+      "description": "Quick access to your credit tools.",
+      "tag": "creditwise-summary",
+      "template": "summary_template",
+      "ms_ac_template": "summary_template",
       "data": {
-        "items": [
+        "title": "CreditWise AI",
+        "steps": [
           {
-            "tag": "credit",
             "label": "Analyze Report",
-            "icon": "/icons/widget-credit.png",
-            "action": {
-              "type": "open-page",
-              "page": "/credit"
-            }
+            "url": "/credit"
           },
           {
-            "tag": "verify",
             "label": "Verify Document",
-            "icon": "/icons/widget-verify.png",
-            "action": {
-              "type": "open-page",
-              "page": "/verify"
-            }
+            "url": "/verify"
           }
         ]
+      },
+      "screenshots": [
+        {
+          "src": "/screenshots/widget-preview.png",
+          "sizes": "600x400",
+          "type": "image/png"
+        }
+      ],
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ],
+      "auth": false,
+      "update": 86400
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "file_handlers": [
+    {
+      "action": "/verify",
+      "accept": {
+        "application/pdf": [".pdf"]
       }
+    }
+  ],
+  "handle_links": "auto",
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwiseai",
+      "url": "/creditwiseai?q=%s"
     }
   ]
 }
