--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,149 +2,147 @@
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/icons/icon-512x512.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/icons/icon-maskable-192x192.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icons/icon-maskable-512x512.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
-    }
-  ],
-  "theme_color": "#4361ee",
-  "background_color": "#f5f7fa",
+  "start_url": "/",
   "display": "standalone",
-  "start_url": ".",
-  "id": "/?source=pwa",
-  "launch_handler": {
-    "client_mode": [
-      "navigate-existing",
-      "auto"
-    ]
-  },
-  "orientation": "portrait",
-  "screenshots": [
-    {
-      "src": "https://placehold.co/1080x2340.png",
-      "type": "image/png",
-      "sizes": "1080x2340",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "https://placehold.co/1280x800.png",
-      "type": "image/png",
-      "sizes": "1280x800",
-      "form_factor": "wide"
-    }
+  "display_override": [
+    "window-controls-overlay",
+    "standalone",
+    "minimal-ui"
   ],
+  "background_color": "#ffffff",
+  "theme_color": "#4361ee",
+  "orientation": "portrait",
+  "id": "/?source=pwa",
+  "scope": "/",
+  "lang": "en-US",
+  "dir": "ltr",
   "categories": [
     "finance",
     "business",
     "utilities"
   ],
-  "dir": "ltr",
-  "lang": "en-US",
   "prefer_related_applications": false,
-  "scope": "/",
-  "display_override": [
-    "standalone",
-    "minimal-ui"
+  "related_applications": [],
+  "scope_extensions": [
+    { "origin": "*.firebaseapp.com" },
+    { "origin": "*.web.app" }
   ],
   "edge_side_panel": {
     "preferred_width": 480
   },
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwiseai",
+      "url": "/credit?source=%s"
+    }
+  ],
   "file_handlers": [
     {
       "action": "/verify",
+      "name": "PDF Document",
       "accept": {
-        "application/pdf": [
-          ".pdf"
-        ]
+        "application/pdf": [".pdf"]
       }
     }
   ],
   "handle_links": "auto",
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwiseai",
-      "url": "/credit?ref=%s"
-    }
-  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
   "shortcuts": [
     {
       "name": "Credit Analysis",
       "short_name": "Credit",
       "description": "Analyze a CIBIL credit report",
       "url": "/credit",
-      "icons": [
-        {
-          "src": "/icons/icon-192x192.svg",
-          "sizes": "192x192"
-        }
-      ]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
-      "name": "Verify Document",
+      "name": "Verify PDF",
       "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF document",
+      "description": "Run forensic analysis on a PDF",
       "url": "/verify",
-      "icons": [
-        {
-          "src": "/icons/icon-192x192.svg",
-          "sizes": "192x192"
-        }
-      ]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     }
   ],
-  "share_target": {
-    "action": "/share-target",
-    "method": "GET",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  },
   "widgets": [
     {
-      "name": "CreditWise AI Summary",
-      "description": "A quick glance at your credit tools.",
-      "tag": "summary",
-      "template": "summary_template",
-      "ms_ac_template": "summary_template",
-      "data": {
-        "url": "/credit"
-      },
-      "screenshots": [
-        {
-          "src": "https://placehold.co/320x180.png",
-          "sizes": "320x180",
-          "type": "image/png"
-        }
-      ],
-      "icons": [
-        {
-          "src": "/icons/icon-192x192.svg",
-          "sizes": "192x192"
-        }
-      ],
-      "auth": false,
-      "update": 86400
+      "name": "CreditWise AI Analysis",
+      "description": "Quickly start a new credit analysis.",
+      "tag": "credit-analysis",
+      "template": "credit_widget",
+      "ms_ac_template": "credit_widget",
+      "data": "{}"
+    }
+  ],
+  "icons": [
+    {
+      "src": "/icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1.png",
+      "type": "image/png",
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/screenshot2.png",
+      "type": "image/png",
+      "sizes": "1920x1080",
+      "form_factor": "wide"
     }
   ]
 }
