--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,136 +1,47 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CreditWise",
+  "short_name": "CreditWiseAI",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
   "display": "standalone",
-  "display_override": [
-    "window-controls-overlay",
-    "standalone",
-    "minimal-ui"
-  ],
   "background_color": "#ffffff",
   "theme_color": "#4361ee",
-  "orientation": "portrait",
-  "id": "/?source=pwa",
-  "scope": "/",
-  "lang": "en-US",
-  "dir": "ltr",
-  "categories": [
-    "finance",
-    "business",
-    "utilities"
-  ],
-  "prefer_related_applications": false,
-  "related_applications": [],
-  "scope_extensions": [
-    { "origin": "*.firebaseapp.com" },
-    { "origin": "*.web.app" }
-  ],
-  "edge_side_panel": {
-    "preferred_width": 480
-  },
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwiseai",
-      "url": "/credit?source=%s"
-    }
-  ],
-  "file_handlers": [
-    {
-      "action": "/verify",
-      "name": "PDF Document",
-      "accept": {
-        "application/pdf": [".pdf"]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
-  "shortcuts": [
-    {
-      "name": "Credit Analysis",
-      "short_name": "Credit",
-      "description": "Analyze a CIBIL credit report",
-      "url": "/credit",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Verify PDF",
-      "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF",
-      "url": "/verify",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    }
-  ],
-  "widgets": [
-    {
-      "name": "CreditWise AI Analysis",
-      "description": "Quickly start a new credit analysis.",
-      "tag": "credit-analysis",
-      "template": "credit_widget",
-      "ms_ac_template": "credit_widget",
-      "data": "{}"
-    }
+  "display_override": [
+    "standalone",
+    "window-controls-overlay"
   ],
   "icons": [
     {
-      "src": "/icons/icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
       "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-maskable-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-maskable-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable"
     }
   ],
+  "id": "/",
+  "launch_handler": {
+    "client_mode": [
+      "navigate-existing",
+      "auto"
+    ]
+  },
+  "orientation": "portrait",
   "screenshots": [
     {
       "src": "/screenshots/screenshot1.png",
@@ -141,8 +52,102 @@
     {
       "src": "/screenshots/screenshot2.png",
       "type": "image/png",
-      "sizes": "1920x1080",
-      "form_factor": "wide"
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
+    }
+  ],
+  "categories": [
+    "finance",
+    "business",
+    "utilities"
+  ],
+  "dir": "ltr",
+  "lang": "en-US",
+  "scope": "/",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "scope_extensions": [
+    {
+      "origin": "*.creditwiseai.com"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "file_handlers": [
+    {
+      "action": "/verify",
+      "accept": {
+        "application/pdf": [
+          ".pdf"
+        ]
+      }
+    }
+  ],
+  "handle_links": "auto",
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwiseai",
+      "url": "/credit?url=%s"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "shortcuts": [
+    {
+      "name": "Credit Analysis",
+      "short_name": "Credit",
+      "description": "Analyze a new credit report",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "/icons/shortcut-credit.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Verify PDF",
+      "short_name": "Verify",
+      "description": "Run forensic analysis on a PDF",
+      "url": "/verify",
+      "icons": [
+        {
+          "src": "/icons/shortcut-verify.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
+  "widgets": [
+    {
+      "name": "CreditWise AI Actions",
+      "description": "Quick actions for your credit analysis.",
+      "tag": "actions",
+      "template": "actions",
+      "ms_ac_template": "actions",
+      "data": {
+        "items": [
+          {
+            "title": "New Credit Analysis",
+            "action": "analyze",
+            "icon": "/icons/icon-192x192.png"
+          },
+          {
+            "title": "Verify a Document",
+            "action": "verify",
+            "icon": "/icons/shortcut-verify.png"
+          }
+        ]
+      },
+      "type": "application/json"
     }
   ]
 }
